# rspack-wasm-vue3-template

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: app.vue  index.html  index.js  lib.rs  utils.rs
src/rsapi/: api.rs
tests/: test.rs
