[package]
name = "rust-rspack-template"
version = "0.1.0"
edition = "2024"
authors = ["xdsun777 <charmgo@qq.com>"]
description = "rust + rspack+vue3 mix template wasm package"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xdsun777/rust-rspack-template"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
reqwest = {version = "0.12.15",features = ["json","stream"]}
tokio = { version = "1", features = ["full"] }
js-sys = "0.3.61"
#tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

#[workspace]
#members = ["rsapi"]
